[project]
name = "p-corridor"
version = "0.1.0"
description = ""
authors = [
    {name = "yukidotts",email = "yukidotts@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "p_corridor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
